# AVL-tree

./: .gitmodules  CMakeLists.txt  README.md  check_end_to_end.py
.github/workflows/: cmake-single-platform.yml
benchs/: CMakeLists.txt  benchs.cpp  generate_bench.py
include/: input_output.hpp  process_queries.hpp  tree.hpp
src/: CMakeLists.txt  main.cpp  main_set.cpp  tree.cpp
tests/: CMakeLists.txt  check_end_to_end.py  tests.cpp
tests/end_to_end/: 1.dat.ans  10.dat.ans  2.ans  2.dat.ans  3.ans  3.dat.ans  4.ans  4.dat.ans  5.ans  5.dat.ans  6.ans  6.dat.ans  7.dat.ans  8.dat.ans  9.dat.ans  generate_tests.py
